--- a/portfolio.html
+++ b/portfolio.html
@@ -173,6 +173,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/greenflag-1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Green Flag</h4>
+                <p>Saudi Themed 2D Platformer Game</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/greenflag-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Saudi Themed 2D Platformer Game"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-greenflag.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
