--- a/about.html
+++ b/about.html
@@ -87,10 +87,10 @@
             </div>
             <div class="col-md-6">
               <p>
-                I'm a Junior in my Bachelor's Computer Engineering Degree with a Minor in Business. I'm a highly motivated and ambitious individual with a passion for technology and its many applications. My interests span a wide range of technical fields, including software development, embedded systems, web development, and cybersecurity. 
+                I'm a Junior pursuing my Bachelor's Computer Engineering Degree with a Minor in Business. I'm a highly motivated and ambitious individual with a passion for technology and its many applications. My interests span a wide range of technical fields, including software development, embedded systems, web development, and cybersecurity. 
               </p>
               <p>
-                While I don't have all the skills yet, I'm always doing something to expand my skill set. I'm committed to learning and growing as a professional, and I'm constantly seeking out new challenges and opportunities to do so. I look forward to applying my knowledge and experience to create innovative solutions and drive business success.              </p>
+                I'm always doing something to expand my skill set. I'm committed to learning and growing as a professional, and I'm constantly seeking out new challenges and opportunities to do so. I look forward to applying my knowledge and experience to create innovative solutions and drive business success.              </p>
               <p>
                 I'm always open to new opportunities. If you'd like to discuss a potential collaboration or have any questions, please feel free to get in touch with me. I look forward to hearing from you!
               </p>
