--- a/cv.html
+++ b/cv.html
@@ -92,12 +92,9 @@
               <p><em>Iowa State University, Ames, IA</em></p>
               <p>
                 <ul>
-                  <li>Successfully performed physical tasks related to technology and light building maintenance, including painting and furniture installation.</li>
-                  <li>Installed and configured wireless and wired networking systems, ensuring efficient connectivity.</li>
-                  <li>Proficiently set up and tuned Wi-Fi networks both indoors and outdoors, optimizing signal strength and coverage.</li>
-                  <li>Configured and installed cameras for video surveillance, ensuring proper functionality and security.</li>
-                  <li>Transferred video footage seamlessly for effective monitoring and analysis purposes.</li>
-                  <li>Demonstrated proficiency in handling various technological components, such as video displays and other related devices.</li>
+                  <li>Played a pivotal role in expanding connectivity to remote locations by installing and configuring access points, enabling seamless connectivity for 50+ devices, empowering efficient operations on farms.</li>
+                  <li>Performed physical tasks related to technology and light building maintenance, including drilling, painting and installation, ensuring a conducive work environment for faculty and staff.</li>
+                  <li>Provided comprehensive support to faculty and staff by assembling workstations, upgrading hardware, reimaging machines for lab or farm utilization, installing audiovisual equipment in classrooms, and registering new machines to the university domain.</li>
                 </ul>
               </p>
             </div>
