--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Welcome to my portfolio page! Here you'll find a showcase of all the projects I've done, both in school and outside of school.</p>
+          <p>Welcome to my portfolio page! Here you'll find a showcase of all the projects I've done.</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
