--- a/about.html
+++ b/about.html
@@ -53,8 +53,7 @@
     <div class="container-fluid d-flex justify-content-between align-items-center">
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a class="active" href="about.html">About</a></li>
+          <li><a class="active" href="about.html">Home</a></li>
           <li><a href="cv.html">CV</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
@@ -77,7 +76,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>About</h2>
+          <h2>Home</h2>
           <p>Ahlan wasahlan! My name is Osaid Samman, it's my pleasure to meet you.</p>
         </div>
         <div class="container">
@@ -152,6 +151,15 @@
                 <span class="star filled">&#x2B50;</span>
               </div>
             </div>
+
+            <div class="skill">
+              <span>VHDL</span>
+              <div class="stars">
+                <span class="star filled">&#x2B50;</span>
+                <span class="star filled">&#x2B50;</span>
+                <span class="star filled">&#x2B50;</span>
+              </div>
+            </div>
           </div>
         
           <div class="col-lg-4">
@@ -186,6 +194,15 @@
         
             <div class="skill">
               <span>React</span>
+              <div class="stars">
+                <span class="star filled">&#x2B50;</span>
+                <span class="star filled">&#x2B50;</span>
+                <span class="star filled">&#x2B50;</span>
+              </div>
+            </div>
+
+            <div class="skill">
+              <span>MIPS Assembly</span>
               <div class="stars">
                 <span class="star filled">&#x2B50;</span>
                 <span class="star filled">&#x2B50;</span>
@@ -228,6 +245,15 @@
                 <span class="star filled">&#x2B50;</span>
               </div>
             </div>
+
+            <div class="skill">
+              <span>SQL</span>
+              <div class="stars">
+                <span class="star filled">&#x2B50;</span>
+                <span class="star filled">&#x2B50;</span>
+                <span class="star filled">&#x2B50;</span>
+              </div>
+            </div>
           </div>
         </div>
 
@@ -256,6 +282,10 @@
         <div class="skill">
           <span>Code Composer Studio</span>
         </div>
+
+        <div class="skill">
+          <span>MySQL</span>
+        </div>
       </div>
 
       <div class="col-lg-4">
@@ -269,6 +299,10 @@
 
         <div class="skill">
           <span>Quartus Prime</span>
+        </div>
+
+        <div class="skill">
+          <span>IntelliJ</span>
         </div>
       </div>
 
@@ -284,6 +318,11 @@
         <div class="skill">
           <span>MongoDB Compass</span>
         </div>
+
+        <div class="skill">
+          <span>Postman</span>
+        </div>
+
       </div>
     </div>
 
