--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,7 @@
     <div class="container-fluid d-flex justify-content-between align-items-center">
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html">Home</a></li>
           <li><a href="cv.html">CV</a></li>
           <li><a class="active" href="portfolio.html">Portfolio</a></li>
         </ul>
@@ -182,6 +181,35 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/greenflag-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Saudi Themed 2D Platformer Game"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-greenflag.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/381-design.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>MIPS Processor</h4>
+                <p>Computer Architecture Project</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/381-design.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MIPS Processor Design"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-381.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/CC-4.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Coin Control</h4>
+                <p>Financial Planner Android App</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/CC-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Financial Planner Android App"><i class="bx bx-plus"></i></a>
+                  <a href="CC.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
