--- a/cv.html
+++ b/cv.html
@@ -36,8 +36,7 @@
     <div class="container-fluid d-flex justify-content-between align-items-center">
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html">Home</a></li>
           <li><a class="active" href="cv.html">CV</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
